--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@angular/router": "^8.0.0",
     "core-js": "2",
     "hammerjs": "^2.0.8",
+    "ngx-carousel-lib": "^0.1.2",
     "rxjs": "^6.5.2",
     "zone.js": "^0.9.1"
   },
