--- a/package.json
+++ b/package.json
@@ -14,10 +14,13 @@
     "@angular/platform-browser": "^8.0.0",
     "@angular/platform-browser-dynamic": "^8.0.0",
     "@angular/router": "^8.0.0",
+    "@ng-bootstrap/ng-bootstrap": "^5.0.0",
+    "bootstrap": "^4.3.1",
     "core-js": "2",
     "hammerjs": "^2.0.8",
-    "instafeed.js": "^1.4.1",
+    "jquery": "1.9.1 - 3",
     "ngx-carousel-lib": "^0.1.2",
+    "popper.js": "^1.14.7",
     "rxjs": "^6.5.2",
     "zone.js": "^0.9.1"
   },
