--- a/package.json
+++ b/package.json
@@ -8,15 +8,18 @@
     "@angular/common": "^8.0.0",
     "@angular/compiler": "^8.0.0",
     "@angular/core": "^8.0.0",
+    "@angular/fire": "^5.2.1",
     "@angular/flex-layout": "^8.0.0-beta.26",
     "@angular/forms": "^8.0.0",
     "@angular/material": "^8.2.2",
     "@angular/platform-browser": "^8.0.0",
     "@angular/platform-browser-dynamic": "^8.0.0",
     "@angular/router": "^8.0.0",
+    "@firebase/app": "^0.4.18",
     "@ng-bootstrap/ng-bootstrap": "^5.0.0",
     "bootstrap": "^4.3.1",
     "core-js": "2",
+    "firebase": "^7.1.0",
     "hammerjs": "^2.0.8",
     "jquery": "1.9.1 - 3",
     "popper.js": "^1.14.7",
