--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "firebase": "^7.1.0",
     "hammerjs": "^2.0.8",
     "jquery": "1.9.1 - 3",
+    "ngx-facebook": "^2.4.0",
     "popper.js": "^1.14.7",
     "rxjs": "^6.5.2",
     "zone.js": "^0.9.1"
